// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Group Box style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px 10px 0px 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-1gd7eh8"
    >
      <legend>
        Test
      </legend>
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Line style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-17xtuq7"
    >
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Title Bar style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-17xtuq7"
    >
      <div
        style="font-family: "Roboto", "Helvetica", "Arial", sans-serif; font-size: 14px; color: rgb(255, 255, 255); background-color: rgb(25, 118, 210); height: 20px; width: 100%;"
      >
        Title
      </div>
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for no style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-1rp040x"
    >
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;
